  validity.

* `mutate_term_count` added to apply a normalizing function to all the term columns
  of a `termco` object without stripping the attributes and class.

* `drop_terms` added to allow the user to explore/iterate on a term list and
  drop terms prior prior to \code{term_count} use without manually editing an
  external term list file.

MINOR FEATURES

* `important_terms` picks up a plot method corresponding to the `frequent_terms`
  plot method.

* `term_count` checks for duplicate categories within tiers for hierarchical
  term lists.

* `read_term_list` checks for valid regex.

IMPROVEMENTS

* `validate_model` now uses `classify` before validating to assign tags.

* `tag_co_occurrence` used a grid + base plotting approach that required
  restarting the graphics device between plots.  This dependency has been
  replaces with a dependency on **ggraph** for plotting networks as grid
  objects.

* `plot.validate_model` now shows tag counts in the sample to provide a relative
  importance of the accuracy in making decisions.

* Open, unescaped or regexes [(i.e., `|)` unescaped pipe followed by a closing
  group character] are now caught and warned for `read_term_list` and thus
  `term_count`.

CHANGES

* `as_dtm` & `as_tdm` moved to the **gofastr** package where they can be used by
  other packages and their classed objects.  **termco** re-exports the two
  functions.

* `summary.validate_model` used to return `n` which was the number of tags from
  the `termco` object.  It now gives n.tags and n.classified to be more explicit
  about counts of potential tags and tags actually assigned by `classify`.

* `colo` no longer uses non-standard evaluation; terms must be quoted.

* `ngram_collocations` has been renamed to  `frequent_ngrams` for better clarity
  in what the function does and as a counter part to `frequent_terms`.

termco 0.4.0 - 0.4.3
----------------------------------------------------------------

NEW FEATURES
