@@ -109,6 +109,7 @@ export(term_count)
 export(term_first)
 export(term_list_template)
 export(test_regex)
+export(tidy_counts)
 export(token_count)
 export(uncovered)
 export(unnest_source_term_list)
